# wapp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-base.yml  ci.yml  release-app.yml  release-base.yml  tauri-preview.yml
npm/wapp-base/: package.json
scripts/: build-base.js  dev.js  fetch-base.mjs  prepare-base.js  verify_ui.py
src/: App.css  App.tsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  fmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: base.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: build.rs  deps.rs  metadata.rs  mod.rs  preview.rs  wapp.rs
src-tauri/src/utils/: mod.rs
src/components/: CommandCenter.tsx  ContextMenu.tsx  EditWappModal.tsx  SettingsView.tsx  Sidebar.tsx  WappCard.tsx  WappGrid.tsx
src/services/: tauri.ts
src/store/: index.tsx
src/styles/: base.css  components.css  layout.css
src/types/: index.ts
ui/: App.tsx  index.html
ui/components/: ContextMenu.tsx  Notifications.tsx  Sidebar.tsx
ui/features/Creator/: EditWappModal.tsx
ui/features/Dashboard/: WappCard.tsx  WappGrid.tsx
ui/features/Settings/: SettingsView.tsx
ui/services/: tauri.ts
ui/store/: index.tsx
wapp-base/src-tauri/: Cargo.toml  tauri.conf.json
wapp-base/src-tauri/src/: lib.rs  main.rs
