[package]
name = "wapp"
version = "0.1.0"
description = "Convert any website into a desktop app instantly"
authors = ["jvon <jvondev@github.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "wapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wapp"
path = "src/main.rs"

[[bin]]
name = "wapp-base"
path = "src/base.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable", "wry", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
scraper = "0.27"
base64 = "0.22"
ico = "0.3"
icns = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
