[package]
name = "wapp-base"
version = "0.1.0"
edition = "2021"

# Pure binary — no lib crate types needed (avoids OUT_DIR issue with generate_context!)
[[bin]]
name = "wapp-base"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
