[package]
name = "wapp-base"
version = "0.1.0"
edition = "2021"

[lib]
name = "wapp_base_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize size reduction
strip = true         # Strip symbols
panic = "abort"      # Remove panic unwinding
